Split test progress